--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.16.3",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.3.1",
+    "require-dir": "^1.1.0",
     "superagent": "^4.0.0-beta.5"
   },
   "devDependencies": {
