coach post route adds coach tomongo

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Rugby Scout server-side application",
   "main": "index.js",
   "scripts": {
-    "test": "jest --coverage --verbose",
+    "test": "jest --coverage",
     "watch": "DEBUG=express:router nodemon index.js"
   },
   "repository": {
