--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "homepage": "https://github.com/TeamAquamarine/rugby-scout-server#readme",
   "dependencies": {
+    "assert": "^1.4.1",
     "babel-env": "^2.4.1",
     "babel-eslint": "^10.0.1",
     "babel-register": "^6.26.0",
