--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
       "!**/node_modules/**",
       "!**/coverage/**",
       "!**/index.js",
-      "!**/app.js"
+      "!**/app.js",
+      "!**/api.js",
+      "!**/authRouter.js",
+      "!**/oauth.js"
     ]
   },
   "repository": {
