--- a/package.json
+++ b/package.json
@@ -41,12 +41,12 @@
     "express": "^4.16.3",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.3.1",
+    "morgan": "^1.9.1",
     "require-dir": "^1.1.0",
     "superagent": "^4.0.0-beta.5"
   },
   "devDependencies": {
     "debug": "^4.0.1",
-    "jest": "^23.6.0",
-    "morgan": "^1.9.1"
+    "jest": "^23.6.0"
   }
 }
