--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "homepage": "https://github.com/TeamAquamarine/rugby-scout-server#readme",
   "dependencies": {
     "assert": "^1.4.1",
+    "aws-sdk": "^2.355.0",
     "babel-env": "^2.4.1",
     "babel-eslint": "^10.0.1",
     "babel-register": "^6.26.0",
@@ -40,9 +41,11 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "faker": "^4.1.0",
+    "fs-extra": "^7.0.1",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.3.1",
     "morgan": "^1.9.1",
+    "multer": "^1.4.1",
     "require-dir": "^1.1.0",
     "superagent": "^4.0.0-beta.5"
   },
